
2009-10-13 r141 Issue #118 Incorrect locale handling on email templates
Patch courtesy of hgeerts. Corrects the handling of locale on email 
templaets, defaulting to English if no locale is provided.

2009-10-13 r142 Issue #117 Incorrect I18N usage in a few spots
Patch thanks to hgeerts.

2009-10-13 r143 Issue #113 - Clicking Queue names on the Dashboard was showing
all tickets; now only shows open tickets. Thanks to Andreas Kotowicz for the 
sugestion.

2009-12-16 r144 Issue #122 - Infinite loop when most recent ticket was 
opened in December. Thanks to Chris Vigelius for the report.

2009-12-16 r145 issue #123 - Google Chart doesn't show when there is a large
volume of data in the system. This patch restricts the chart to 1000px wide.

2009-12-16 r146 Issue #121 Formatting fix for email subjects. Thanks, 
Andreas Kotowicz.

2009-12-16 r147 Issue #119 Update Russian translation, thanks to Alex Yakovlev

2009-12-23 r148 Issue #125 Errors occurring when running reports with no data

2010-01-20 r149 Issue #126 Reports didn't work with transalations.

2010-01-20 r150 Issue #127 Add german transalation, courtesy of openinformation.org

2009-01-20 r151 Issue #128 If queue name has a dash in it, email imported failed. Thanks to enix.org for the patch.

2010-01-21 r152 Fix indentation error caused by issue #126.

2010-01-26 r153 Fix issue #129 - can not 'unassign' tickets. Thanks to 
lukeman for the patch.

2010-01-26 r154 Fix bug in the code from Issue #102 where TicketCC's couldn't
be deleted. Thanks again to lukeman.

2010-01-31 r155 Fix bug caused by issue #129 - ticket followup titles being 
set incorrectly. Thanks to Lukeman for the fix.

2010-07-16 r157 Fix issues #141, #142 - IMAP infinite loops and ticket 
pagination issues. Thanks to Walter Doekes for the patches.

2010-07-16 r158 New CSRF functionality for Django 1.1+. Thanks to 
'litchfield4' for the patch.

2010-09-04 r159 Error when updating multiple tickets.  Issue #135.