@@ -8,7 +8,7 @@
 <p>Are you sure you want to delete this ticket (<em>{{ ticket_title }}</em>)? All traces of the ticket, including followups, attachments, and updates will be irreversably removed.</p>
 {% endblocktrans %}
 
-{% blocktrans %}<p><a href='../'>No, Don't Delete It</a></p>
+<p><a href='../'>{% trans "No, Don't Delete It" %}</a></p>
 
-<form method='post' action='./'><input type='submit' value='Yes - Delete It' />{% csrf_token %}</form>
-{% endblocktrans %}{% endblock %}
+<form method='post' action='./'><input type='submit' value='{% trans "Yes - Delete It" %}' />{% csrf_token %}</form>
+{% endblock %}
