@@ -8,7 +8,7 @@
 <p>Are you sure you wish to stop removing this email address (<em>{{ email_address }}</em>) and allow their e-mails to automatically create tickets in your system? You can re-add this e-mail address at any time.</p>
 {% endblocktrans %}
 
-{% blocktrans %}<p><a href='../../'>Keep Ignoring It</a></p>
+<p><a href='../../'>{% trans "Keep Ignoring It" %}</a></p>
 
-<form method='post' action='./'><input type='submit' value='Stop Ignoring It' />{% csrf_token %}</form>
-{% endblocktrans %}{% endblock %}
+<form method='post' action='./'><input type='submit' value='{% trans "Stop Ignoring It" %}' />{% csrf_token %}</form>
+{% endblock %}
